--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="box row">
           <div class="email-password-area  col-xs-12" ng-class="[hasSocial ? 'small col-sm-8' : 'large col-sm-12']">
             <div class="header">
-              <span>Morepork Log In</span>
-              <span ng-show="canRegister" wd-can-register>
+              <span>Morepork2 Log In</span>
+              <span ng-show="false" wd-can-register>
                 <span> or </span>
                 <a href="#register">Create an Account</a>
               </span>
