--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <div>
-                <button class="login btn btn-login btn-sp-green" type="submit" ng-disabled="submitting">Log In</button>
+                <button class="login btn btn-login btn-morepork" type="submit" ng-disabled="submitting">Log In</button>
               </div>
             </form>
           </div>
