--- a/index.html
+++ b/index.html
@@ -181,12 +181,13 @@
                 <br/>
                 <p>{{unknownError}}</p>
               </div>
-              <button class="btn btn-forgot btn-sp-green" type="submit">Reset Password</button>
+              <button class="btn btn-forgot btn-morepork" type="submit">Reset Password</button>
             </form>
           </div>
         </div>
         <a ng-show="!sent" class="to-login" href="#" wd-back-to-login>Back to Log In</a>
       </div>
+
     </script>
     <script type="text/ng-template" id="views/reset.html">
       <div class="view reset-view" ng-show="status!=='loading'">
