--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
   <body ng-app="stormpathIdpApp">
     <script type="text/ng-template" id="views/login.html">
       <div class="view login-view" ng-show="ready">
-        <div class="row">
-          <div class="col-xs-12" ng-class="[hasSocial ? 'small col-sm-8' : 'large col-sm-12']">
-            <div ng-show="false" class="header">
+        <div class="box row">
+          <div class="email-password-area  col-xs-12" ng-class="[hasSocial ? 'small col-sm-8' : 'large col-sm-12']">
+            <div class="header">
               <span>Log In</span>
               <span ng-show="canRegister" wd-can-register>
                 <span> or </span>
                 <a href="#register">Create an Account</a>
               </span>
+
             </div>
             <div class="alert alert-danger bad-login" ng-show="errors.badLogin">
               Invalid username or password.
@@ -57,7 +58,7 @@
                 </div>
               </div>
               <div class="form-group group-remember-me">
-                <div ng-show="false" class="col-sm-8" ng-class="[hasSocial ? '' : 'col-sm-offset-4']">
+                <div class="col-sm-8" ng-class="[hasSocial ? '' : 'col-sm-offset-4']">
                   <input type="checkbox" id="remember">
                   <label for="remember">Remember me</label>
                 </div>
@@ -181,13 +182,12 @@
                 <br/>
                 <p>{{unknownError}}</p>
               </div>
-              <button class="btn btn-forgot btn-morepork" type="submit">Reset Password</button>
+              <button class="btn btn-forgot btn-sp-green" type="submit">Reset Password</button>
             </form>
           </div>
         </div>
         <a ng-show="!sent" class="to-login" href="#" wd-back-to-login>Back to Log In</a>
       </div>
-
     </script>
     <script type="text/ng-template" id="views/reset.html">
       <div class="view reset-view" ng-show="status!=='loading'">
