Add the maintenance image

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 <div class="view login-view" ng-show="ready">
     <div class="row">
         <div class="col-xs-12" ng-class="[hasSocial ? 'small col-sm-8' : 'large col-sm-12']">
-            <div class="alert alert-danger" ng-show="errors.userMessage">
+            <div>
+                <img src="images/maintenence.png" alt="under construction">
                 <strong>Our login page is under construction.</strong>
-                <br/>
-                <br/>
                 <p>Please come back soon, or contact our Support Team via the yellow chat button below.</p>
             </div>
         </div>
