--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     <div class="row">
         <div class="col-xs-12" ng-class="[hasSocial ? 'small col-sm-8' : 'large col-sm-12']">
             <div>
-                <img src="images/maintenence.png" alt="under construction">
-                <strong>Our login page is under construction.</strong>
-                <p>Please come back soon, or contact our Support Team via the yellow chat button below.</p>
+                <img src="images/maintenence.png" alt="under construction" class="img-responsive" style="margin: 0 auto">
+                <br>
+                <p class="text-center"><strong>Our login page is under construction.</strong></p>
+                <p class="text-center">Please come back soon, or contact our Support Team via the yellow chat button below.</p>
             </div>
         </div>
     </div>
