--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="styles/main.css"/>
+    <style type="text/css">
+        .img-responsive {
+            max-width: 90%;
+            margin: 0 auto 20px;
+        }
+    </style>
 
 </head>
 <body ng-app="stormpathIdpApp">
@@ -33,8 +39,7 @@
     <div class="row">
         <div class="col-xs-12" ng-class="[hasSocial ? 'small col-sm-8' : 'large col-sm-12']">
             <div>
-                <img src="images/maintenence.png" alt="under construction" class="img-responsive" style="margin: 0 auto">
-                <br>
+                <img src="images/maintenence.png" alt="under construction" class="img-responsive">
                 <p class="text-center"><strong>Our login page is under construction.</strong></p>
                 <p class="text-center">Please come back soon, or contact our Support Team via the yellow chat button below.</p>
             </div>
