minor tweak to remove ng tags

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <title>Login</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet"
-          type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="styles/main.css"/>
@@ -35,9 +34,9 @@
 <script src="scripts/iecompat.js"></script>
 <![endif]-->
 
-<div class="view login-view" ng-show="ready">
+<div class="view login-view">
     <div class="row">
-        <div class="col-xs-12" ng-class="[hasSocial ? 'small col-sm-8' : 'large col-sm-12']">
+        <div class="col-xs-12 large col-sm-12">
             <div>
                 <img src="images/maintenence.png" alt="under construction" class="img-responsive">
                 <p class="text-center"><strong>Our login page is under construction.</strong></p>
