--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <script src="scripts/iecompat.js"></script>
 <![endif]-->
 
-<div class="view login-view">
+<div class="view login-view container-fluid">
     <div class="row">
         <div class="col-xs-12 large col-sm-12">
             <div>
